--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
             >
               Close
             </button>
-            <button type="button" class="btn btn-primary">Sumbmit</button>
+            <button type="button" class="btn btn-primary">Submit</button>
           </div>
         </div>
       </div>
